bluec-tests/tests/invalid/types_fn_pointer/call_negate.c
int get10(void) {
    return 10;
}

int main(void) {
    int (*fn)(void) = get10;
    int v = (-fn)();
    return v;
}